k8s-files/basic1/pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: flask-pod
  labels:
    app: flask-app
spec:
  containers:
  - name: flask-container
    image: flask-app:v1
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 8000
