k8s-files/basic1/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  type: NodePort
  selector:
    app: flask-app
  ports:
  - port: 80            # Internal port cluster traffic uses to talk to the service
    targetPort: 8000    # The port your Flask container is actually running on
    nodePort: 30007     # Exposes the app outside the cluster on http://localhost:30007
